--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,8 +2,18 @@
 layout: default
 ---
 
-<main class="main">
+<script type="text/javascript">
+	atOptions = {
+		'key' : 'c3c66b8897b40480ed9ba5c6949a690d',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/c3c66b8897b40480ed9ba5c6949a690d/invoke.js"></script>
 
+<main class="main">
   <!-- Page Title -->
   <div class="page-title">
     <div class="heading">
@@ -100,8 +110,16 @@ layout: default
 
 </main>
 
-<script async="async" data-cfasync="false" src="//pl27687451.revenuecpmgate.com/0a87f1b8f78366019c87f1e94c2638ae/invoke.js"></script>
-<div id="container-0a87f1b8f78366019c87f1e94c2638ae"></div>
+<script type="text/javascript">
+	atOptions = {
+		'key' : 'c3c66b8897b40480ed9ba5c6949a690d',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/c3c66b8897b40480ed9ba5c6949a690d/invoke.js"></script>
 
 <style>
   .thumbnail-container {
