--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,6 +58,9 @@
   {% include footer.html %}
   <!-- End Footer -->
 
+  <script async="async" data-cfasync="false" src="//pl27687451.revenuecpmgate.com/0a87f1b8f78366019c87f1e94c2638ae/invoke.js"></script>
+<div id="container-0a87f1b8f78366019c87f1e94c2638ae"></div>
+  
   <a href="/" class="scroll-top d-flex align-items-center justify-content-center">
     <i class="bi bi-arrow-up-short"></i>
   </a>
