--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,9 @@
 <footer id="footer" class="footer">
+
+  <script async="async" data-cfasync="false" src="//pl27687451.revenuecpmgate.com/0a87f1b8f78366019c87f1e94c2638ae/invoke.js"></script>
+<div id="container-0a87f1b8f78366019c87f1e94c2638ae"></div>
+
+  
   <div class="container footer-top">
     <div class="row gy-4">
       <div class="col-lg-4 col-md-6 footer-about">
