--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -38,10 +38,13 @@
 }
 </script>
 
-    <script type='text/javascript' src='//pl27688065.revenuecpmgate.com/0a/29/6b/0a296bc48d714a706b5b1c92a678fa87.js'></script>
+   <script type='text/javascript' src='//wormdistressedunit.com/0a/29/6b/0a296bc48d714a706b5b1c92a678fa87.js'></script>
   
 </head>
 <body class="blog-page">
+
+  <script async="async" data-cfasync="false" src="//wormdistressedunit.com/0a87f1b8f78366019c87f1e94c2638ae/invoke.js"></script>
+<div id="container-0a87f1b8f78366019c87f1e94c2638ae"></div>
 
   {% include header.html %}
 
