--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,17 +25,8 @@ layout: default
     </nav>
   </div><!-- End Page Title -->
 
-<script type="text/javascript">
-	atOptions = {
-		'key' : 'c3c66b8897b40480ed9ba5c6949a690d',
-		'format' : 'iframe',
-		'height' : 90,
-		'width' : 728,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//wormdistressedunit.com/c3c66b8897b40480ed9ba5c6949a690d/invoke.js"></script>
-  
+<script async="async" data-cfasync="false" src="//wormdistressedunit.com/0a87f1b8f78366019c87f1e94c2638ae/invoke.js"></script>
+<div id="container-0a87f1b8f78366019c87f1e94c2638ae"></div>
 
   <div class="container">
     <div class="row">
@@ -86,7 +77,7 @@ layout: default
   </div>
 {% endif %}
 
-              <script async="async" data-cfasync="false" src="//wormdistressedunit.com/0a87f1b8f78366019c87f1e94c2638ae/invoke.js"></script>
+<script async="async" data-cfasync="false" src="//wormdistressedunit.com/0a87f1b8f78366019c87f1e94c2638ae/invoke.js"></script>
 <div id="container-0a87f1b8f78366019c87f1e94c2638ae"></div>
 
               <div class="content">
@@ -105,17 +96,8 @@ layout: default
     </div>
   </div>
 
-  <script type="text/javascript">
-	atOptions = {
-		'key' : 'c3c66b8897b40480ed9ba5c6949a690d',
-		'format' : 'iframe',
-		'height' : 90,
-		'width' : 728,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//wormdistressedunit.com/c3c66b8897b40480ed9ba5c6949a690d/invoke.js"></script>
-
+<script async="async" data-cfasync="false" src="//wormdistressedunit.com/0a87f1b8f78366019c87f1e94c2638ae/invoke.js"></script>
+<div id="container-0a87f1b8f78366019c87f1e94c2638ae"></div>
   
 </main>
 
