--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -77,8 +77,16 @@ layout: default
   </div>
 {% endif %}
 
-<script async="async" data-cfasync="false" src="//wormdistressedunit.com/0a87f1b8f78366019c87f1e94c2638ae/invoke.js"></script>
-<div id="container-0a87f1b8f78366019c87f1e94c2638ae"></div>
+<script type="text/javascript">
+	atOptions = {
+		'key' : '5d8f2144de59067f8ad9d41286ab8251',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//wormdistressedunit.com/5d8f2144de59067f8ad9d41286ab8251/invoke.js"></script>
 
               <div class="content">
                 {{ content }}
