--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,82 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <title>{{ page.meta_title | default: page.title }} | {{ site.title }}</title>
+  <meta name="description" content="{{ page.meta_description | default: site.description }}">
+  <meta name="keywords" content="{{ page.meta_keywords | join: ', ' }}">
+  <link rel="canonical" href="{{ site.url }}{{ page.url }}">
 
-<title>{{ page.meta_title | default: page.title }} | {{ site.title }}</title>
-<meta name="description" content="{{ page.meta_description | default: site.description }}">
-<meta name="keywords" content="{{ page.meta_keywords | join: ', ' }}">
-<meta name="robots" content="noindex, nofollow">
-<link rel="canonical" href="{{ site.url }}{{ page.url }}">
-{% seo %}
-
-
-  <!-- SEO -->
   {% seo %}
 
-  <!-- Favicon -->
+  <!-- Favicons -->
   <link href="https://www.bizznist.com/assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com" rel="preconnect">
+  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="https://www.bizznist.com/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://www.bizznist.com/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="https://www.bizznist.com/assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="https://www.bizznist.com/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="https://www.bizznist.com/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
-  <link href="https://www.bizznist.com/assets/css/main.css" rel="stylesheet">
+  <link href="assets/css/main.css" rel="stylesheet">
+
+  <script type='text/javascript' src='//wormdistressedunit.com/0a/29/6b/0a296bc48d714a706b5b1c92a678fa87.js'></script>
+
 </head>
 
-<body>
+<body class="index-page">
 
   <!-- ======= Header ======= -->
-  {% include header.html %}
+    {% include header.html %}
   <!-- End Header -->
-
+  
   <main id="main">
     {{ content }}
   </main>
 
-<style>
-  #main{
-    padding-top: 100px;
-    padding-left: 75px;
-    padding-right: 75px;
-  }
-@media (max-width: 768px) {
-  #main {
-    padding-top: 100px;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-}
-</style>
-
   <!-- ======= Footer ======= -->
-  {% include footer.html %}
+    {% include footer.html %}
   <!-- End Footer -->
-
-  <script async="async" data-cfasync="false" src="//pl27687451.revenuecpmgate.com/0a87f1b8f78366019c87f1e94c2638ae/invoke.js"></script>
-<div id="container-0a87f1b8f78366019c87f1e94c2638ae"></div>
   
-  <a href="/" class="scroll-top d-flex align-items-center justify-content-center">
-    <i class="bi bi-arrow-up-short"></i>
-  </a>
+  <!-- Scroll Top -->
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="https://www.bizznist.com/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="https://www.bizznist.com/assets/vendor/aos/aos.js"></script>
-  <script src="https://www.bizznist.com/assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="https://www.bizznist.com/assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="https://www.bizznist.com/assets/vendor/php-email-form/validate.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 
   <!-- Main JS File -->
-  <script src="https://www.bizznist.com/assets/js/main.js"></script>
+  <script src="assets/js/main.js"></script>
+  <script src="/js/include.js"></script>
 
-  <script type='text/javascript' src='//pl27688123.revenuecpmgate.com/a4/a0/e5/a4a0e5d0466ca41c2a7d78f1ab4dc22b.js'></script>
-
+  <script type='text/javascript' src='//wormdistressedunit.com/a4/a0/e5/a4a0e5d0466ca41c2a7d78f1ab4dc22b.js'></script>
+  
 </body>
-</html>
 
+</html>
