--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2775,16 +2775,16 @@ section,
 /* ===== Mobile Navigation Fix ===== */
 @media (max-width: 991px) {
   #navmenu {
-    position: absolute;
+    position: unset;
     top: 60px; /* match your header height */
     right: 0;
-    width: 100%;
+    width: 38px;
     background: #fff;
     flex-direction: column;
     align-items: flex-start;
-    padding: 15px 0;
+    padding: 0;
     box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-    z-index: 999;
+    z-index: 9997;
   }
 
   /* Show when mobile nav is active */
